<resources>
    <string name="app_name">The Weathear</string>
    <string name="center">|</string>
    <string name="open">The Weathear</string>
    <string name="Sunrise">Sunrise</string>
    <string name="Sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="feelslike">Feels like</string>
    <string name="airquality">Air quality</string>
    <string name="detail">Detail</string>
    <string name="search">Search...</string>
    <string name="disconnected">Không có kết nối Internet</string>
    <string name="city">Thành phố</string>
    <string name="delete">Xóa</string>
    <string name="deletecity">Xóa Thành Phố</string>
    <string name="cancel">Thoát</string>
</resources>