<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/bg_corner_16"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_corner_16_toolbar"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/deletecity"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_15sdp"/>

    <AutoCompleteTextView
        android:id="@+id/searchName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/search"
        android:dropDownAnchor="@id/spacer"
        android:paddingStart="10dp"
        android:completionThreshold="1"
        android:textSize="@dimen/_20sdp" />
    <Space
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TextView
        android:id="@+id/notificationDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/red"
        android:textSize="@dimen/_15sdp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/_20sdp">

        <Button
            android:id="@+id/buttondelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cloudyEnd"
            android:text="@string/delete" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cloudyEnd"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>