<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/backgrounditem"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_cloudy">

    <TextView
        android:id="@+id/datetoday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:text=" | Thứ Tư, 4 tháng 5, 2022"
        android:textSize="@dimen/_10sdp" />

    <LinearLayout
        android:id="@+id/headerdetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgWeather"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center" />


        <TextView
            android:id="@+id/statusToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:text="Hà Nội"
            android:textSize="@dimen/_30sdp" />
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:text=" | Thứ Tư, 4 tháng 5, 2022"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:id="@+id/temlpToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="40°C"
            android:textSize="@dimen/_50sdp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/temlpHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:text="36 C"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/center"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:id="@+id/temlpLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:text=" 37 C"
                android:textSize="@dimen/_16sdp" />
        </LinearLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/bodyDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerdetail"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white2"
        app:cardBackgroundColor="@color/white2"
        app:cardCornerRadius="3dp"
        app:cardElevation="-1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/sunrise" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/Sunrise"
                    android:textColor="@color/white3"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/sunRise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif"
                    android:text="5:30"
                    android:textColor="@color/white3"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/sunset" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/Sunset"
                    android:textColor="@color/white3"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/sunSet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif"
                    android:text="5:30"
                    android:textColor="@color/white3"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/wind" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/wind"
                    android:textColor="@color/white3"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/speedWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif"
                    android:text="5:30"
                    android:textColor="@color/white3"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/humidity" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/humidity"
                    android:textColor="@color/white3"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif"
                    android:text="5:30"
                    android:textColor="@color/white3"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/feelslike" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/feelslike"
                    android:textColor="@color/white3"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/feelsLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif"
                    android:text="5:30"
                    android:textColor="@color/white3"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listHourly"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bodyDetail" />


</RelativeLayout>